--- a/univariate_regression.ipynb
+++ b/univariate_regression.ipynb
@@ -9,7 +9,7 @@
     "**Name**: Babandeep \n",
     "**Student ID**: 9001552  \n",
     "**Course**:  CSCN8010\n",
-    "**GitHub**: https://github.com/Babandeep16/Practical-Lab-1\n"
+    "**GitHub**: https://github.com/Babandeep16/Prac_Lab01.git\n"
    ]
   },
   {
